Add `AppCompatActivitySetup` class.
- Create a setup utility class that includes method chaining for cleaner
  calls to set up an `AppCompatActivity`.
- Replace existing calls to `AppCompatUtil` with
  `AppCompatActivitySetup`.
- Set up parent hierarchy for activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,15 +32,18 @@
 
         <activity
             android:name=".ui.HierarchyViewerActivity"
-            android:label="@string/activity_title_hierarchy_viewer" />
+            android:label="@string/activity_title_hierarchy_viewer"
+            android:parentActivityName=".ui.MainActivity" />
 
         <activity
             android:name=".ui.AttributesActivity"
-            android:label="@string/activity_title_attributes" />
+            android:label="@string/activity_title_attributes"
+            android:parentActivityName=".ui.MainActivity"  />
 
         <activity
             android:name=".ui.SimpleViewsActivity"
-            android:label="@string/activity_title_simple_views" />
+            android:label="@string/activity_title_simple_views"
+            android:parentActivityName=".ui.MainActivity"  />
     </application>
 
 </manifest>
