Create "On the Fly" example.
- Create activity and layout for "On the Fly" example.
- Add logic to dynamically inflate layout and inflate view stuf.
- Move `Example` up one package and re-do code scope.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".ui.SimplerViewsActivity"
             android:label="@string/activity_title_simpler_views"
             android:parentActivityName=".ui.MainActivity"  />
+
+        <activity
+            android:name=".ui.OnTheFlyActivity"
+            android:label="@string/activity_title_on_the_fly"
             android:parentActivityName=".ui.MainActivity"  />
 
         <activity
