--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 ext.versions = [
-        support: "23.1.0",
+        support: "23.2.1",
         butterknife: "7.0.1",
         calligraphy: "2.1.0"
 ]
@@ -13,7 +13,7 @@ def versionBuild = 0
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '24 rc1'
 
     defaultConfig {
         applicationId "com.randomlytyping.lovingleanlayouts"
