--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
-#Sun Oct 18 22:26:34 EDT 2015
+#Thu Mar 17 12:33:09 MDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.4-all.zip
 org.gradle.daemon=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
