--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,28 @@
 apply plugin: 'com.android.application'
 
 ext.versions = [
-        support: "23.2.1",
+        support: "24.0.0",
+        constraintlayout: "1.0.0-alpha2",
         butterknife: "7.0.1",
         calligraphy: "2.1.0"
 ]
 
-def versionMajor = 0
-def versionMinor = 1
+def versionMajor = 1
+def versionMinor = 0
 def versionPatch = 0
 def versionBuild = 0
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion '24 rc1'
 
     defaultConfig {
         applicationId "com.randomlytyping.lovingleanlayouts"
         minSdkVersion 17
-        targetSdkVersion 23
-
+        targetSdkVersion 24
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -33,16 +34,22 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     // Android
     compile "com.android.support:appcompat-v7:${versions.support}"
     // Android: Widgets
     compile "com.android.support:recyclerview-v7:${versions.support}"
     compile "com.android.support:cardview-v7:${versions.support}"
+    compile "com.android.support.constraint:constraint-layout:${versions.constraintlayout}"
 
     // Utility
     compile "com.jakewharton:butterknife:${versions.butterknife}"
 
     // UI
     compile "uk.co.chrisjenx:calligraphy:${versions.calligraphy}"
+
+    // Testing
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile "com.android.support:support-annotations:${versions.support}"
 }
