--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 ext.versions = [
         support: "24.0.0",
-        constraintlayout: "1.0.0-alpha2",
+        constraintlayout: "1.0.0-alpha3",
         butterknife: "7.0.1",
         calligraphy: "2.1.0"
 ]
@@ -40,6 +40,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${versions.support}"
     compile "com.android.support:cardview-v7:${versions.support}"
     compile "com.android.support.constraint:constraint-layout:${versions.constraintlayout}"
+    compile "com.android.support.constraint:constraint-layout-solver:${versions.constraintlayout}"
 
     // Utility
     compile "com.jakewharton:butterknife:${versions.butterknife}"
