--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,25 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 ext.versions = [
-        buildtools      : "25.0.2",
-        butterknife     : "8.5.1",
-        support         : "25.3.1",
-        calligraphy     : "2.2.0",
+        // Android
+        targetSdkVersion: 26,
+        minSdkVersion   : 19,
+        buildtools      : "26.0.0",
+        support         : "25.4.0",
+
+        // Components
         constraintlayout: "1.0.2",
-        timber          : "4.5.1"
+
+        // Logging/Monitoring
+        timber          : "4.5.1",
+
+        // UI
+        calligraphy     : "2.3.0",
+
+        // Utility
+        butterknife     : "8.6.0"
 ]
 
 def versionMajor = 1
@@ -14,14 +27,14 @@ def versionMinor = 0
 def versionPatch = 0
 def versionBuild = 0
 
-android {
-    compileSdkVersion 25
-    buildToolsVersion "${versions.buildtools}"
 
+android {
+    compileSdkVersion versions.targetSdkVersion
+    buildToolsVersion versions.buildtools
     defaultConfig {
         applicationId "com.randomlytyping.lovingleanlayouts"
-        minSdkVersion 19
-        targetSdkVersion 25
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,28 +48,31 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     // Android
-    compile "com.android.support:appcompat-v7:${versions.support}"
-    // Android: Widgets
-    compile "com.android.support:recyclerview-v7:${versions.support}"
-    compile "com.android.support:cardview-v7:${versions.support}"
-    compile "com.android.support.constraint:constraint-layout:${versions.constraintlayout}"
-    compile "com.android.support.constraint:constraint-layout-solver:${versions.constraintlayout}"
+    implementation "com.android.support:appcompat-v7:$versions.support"
+    implementation "com.android.support:cardview-v7:$versions.support"
+    implementation "com.android.support:support-annotations:$versions.support"
+
+    // Components
+    implementation "com.android.support:recyclerview-v7:$versions.support"
+    implementation "com.android.support.constraint:constraint-layout:$versions.constraintlayout"
+    implementation "com.android.support.constraint:constraint-layout-solver:$versions.constraintlayout"
 
     // Utility
-    compile "com.jakewharton:butterknife:${versions.butterknife}"
-    annotationProcessor "com.jakewharton:butterknife-compiler:${versions.butterknife}"
+    implementation "com.jakewharton:butterknife:$versions.butterknife"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$versions.butterknife"
 
     // UI
-    compile "uk.co.chrisjenx:calligraphy:${versions.calligraphy}"
+    implementation "uk.co.chrisjenx:calligraphy:$versions.calligraphy"
 
     // Logging
-    compile "com.jakewharton.timber:timber:${versions.timber}"
+    implementation "com.jakewharton.timber:timber:$versions.timber"
 
     // Testing
-    androidTestCompile "com.android.support:support-annotations:${versions.support}"
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestImplementation ('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testImplementation 'junit:junit:4.12'
 }
